--- a/Version01Proyecto-main/estilos.css
+++ b/Version01Proyecto-main/estilos.css
@@ -1,21 +1,462 @@
-h1 {
-    color: #603fe5;
+* {
+    box-sizing: border-box;
+}
+
+img {
+    border: 5px solid rgb(70, 103, 150);
+    border-radius: 20px; 
+}
+
+
+body {
+    font-family: "arial";
+    font-size: 20px;
+    color: rgb(20, 84, 174);
+}
+
+
+a {
+    display: inline-block;
+}
+
+p {
+    color: #000000;
+}
+
+header {
+    padding: 5px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+}
+
+header.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .container .logo {
+    width: 200px;
+}
+
+header .container .tienda {
+    width: 30px;
+}
+
+header .container nav a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    margin: 10px 9px;
+    font-size: 25px;
+    font-family: "arial";
+    font-weight: bold;
+}
+
+header .container nav a:hover {
+    color: #4195e4;
+}
+
+.seccion {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.cuadrado-perfecto {
+    width: 100%;
+    padding-bottom: 100%;
+    position: relative;
+}
+
+.cuadrado-perfecto2 {
+    width: 100%;
     text-align: center;
+}
+
+.cuadrado-perfecto img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 50px;
+    left: 10px;
+}
+
+.cuadrado-perfecto2 img {
+    width: 80%;
+    height: 80%;
+    top: 0;
+    left: 0;
+}
+
+
+.container {
+    width: 1300px;
+    margin: 0 auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    position: relative;
+}
+
+.container-fluid {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    position: relative;
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -100px;
+    margin-left: -100px;
+}
+
+.fila {
+    display: flex;
+    justify-content: space-between;
+    margin-right: -60px;
+    margin-left: -15px;
+}
+
+.columna {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.columna-33 {
+    width: 25%;
+}
+
+.columna-25 {
+    width: 24%;
+}
+
+.columna-50 {
+    width: 50%;
+}
+
+.columna-100 {
+    width: 100%;
+}
+
+.empujar-50 {
+    margin-left: 50%;
+}
+
+.empujar-58 {
+    margin-left: 58.33%;
+}
+
+.empujar-66 {
+    margin-left: 66.66%;
+}
+
+.empujar-0 {
+    margin-left: 0;
+}
+
+
+#inicio {
+    position: relative;
+}
+
+#inicio img {
+    width: 100%;
+    display: block;
+}
+
+#inicio .bloque-inicio {
+    position: absolute;
+    top: 80%;
+    left: 30%;
+    width: 400px;
+    text-align: center;
+    margin-left: -400px;
+    margin-top: -200px;
+}
+
+#inicio .bloque-inicio h1 {
+    color: rgb(43, 150, 212);
+    font-size: 50px;
+}
+
+#inicio .bloque-inicio p {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+}
+
+
+.boton {
+    text-align: center;
+    text-decoration: none;
+    padding: 15px 20px;
+    border: none;
+}
+
+.boton.boton-rojo {
+    color: white;
+    background-color: red;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.boton.boton-verde {
+    color: white;
+    background-color: rgb(37, 139, 207);
+    font-size: 25px;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+}
+
+.boton.boton-verde:hover {
+    background-color: #436f8b;
+}
+
+.boton.boton-negro {
+    color: white;
     background-color: black;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.boton.boton-negro:hover {
+    color: black;
+    background-color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.boton.boton-blanco {
+    color: red;
+    background-color: white;
+    font-size: 20px;
+    font-weight: bold;
+    border: 1px solid red;
+}
+
+#nosotros {
+    background-color: #094367;
+    background-size: cover;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 30px;
+}
+
+#nosotros p {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 20px;
+    text-align: justify;
+    line-height: 30px;
+}
+
+
+#servicios .bloque-servicio {
+    border: 1px solid grey;
+}
+
+#servicios .bloque-servicio .bloque-img-servicio img {
+    width: 50%;
+}
+
+#servicios .bloque-servicio .bloque-img-servicio .cuadrado-perfecto {
+    padding-bottom: 50%;
+}
+
+#servicios .bloque-servicio .bloque-contenido-servicio {
+    padding: 15px;
+}
+
+#servicios .bloque-servicio .bloque-contenido-servicio h3 {
+    margin-top: 0;
+    font-size: 30px;
+}
+
+#servicios .container h3 {
+    margin-top: 0px;
+    font-size: 50px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+
+#galeria h3 {
+    margin-top: 0;
+    font-size: 50px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+#contactenos h3 {
+    font-size: 50px;
+    margin: 0px;
+    color: #000000;
+}
+
+#galeria h4 {
+    padding-left: 50px;
+    padding-right: 50px;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    color: #ffffff;
+    width: 100%;
+}
+
+#galeria img {
+    width: 105%;
+    height: 380px;
+    object-fit: cover;
+    filter: grayscale(1);
+}
+
+#galeria .cuadrado-perfecto:hover img {
+    filter: grayscale(0);
+}
+
+#galeria .cuadrado-perfecto:hover h4 {
+    display: none;
+}
+
+
+#contactenos {
+    position: relative;
+}
+
+#contactenos iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: grayscale(1);
+}
+
+#contactenos .formu {
     padding: 30px;
+    background-color: #0a5274;
+    border-radius: 30px;
+    text-align: center;
+    margin-top: auto;
 }
 
-.contenedor01 {
-    width: 1240px;
-    margin: 0 auto 0 auto;
+#contactenos .formu .form-blok {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
 }
 
-.fila01 {
+#contactenos .formu .form-blok .form-control {
+    display: block;
+    height: 40px;
+    font-size: 16px;
+    border: 1px solid grey;
+    width: 100%;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
+#contactenos .formu .form-blok textarea {
+    display: block;
+    height: 200px;
+    font-size: 16px;
+    border: 1px solid grey;
+    width: 100%;
+    padding: 5px 10px;
+    border-radius: 20px;
+}
+
+#contactenos .formu .form-blok.bloque-ultimo {
+    margin-bottom: 0%;
+}
+
+
+footer {
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    padding-bottom: 0;
+}
+
+footer .barra-footer {
+    background-color: rgb(44, 123, 160);
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+footer .barra-desarrollador {
+    background-color: rgb(0, 0, 0);
+    text-align: left;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+footer ul {
+    padding-left: 0;
+    list-style: none;
+}
+
+footer ul li {
+    margin-bottom: 5px;
+}
+
+footer .logo-footer {
+    width: 100%;
+}
+
+footer p {
+    color: rgb(241, 241, 241);
+    margin-bottom: 30px;
+}
+
+footer a {
+    text-decoration: none;
+    color: rgb(253, 253, 253);
+}
+
+footer a:hover {
+    color: #1c92c0;
+}
+
+footer .redes {
+    font-size: 50px;
     display: flex;
     justify-content: space-between;
 }
 
-.columna01 {
-    width: 50%;
-    width: 99%;
+footer .redes a {
+    margin: px;
 }
+
+
+#imagenmasancha {
+    width: 900px;
+    margin-top: 30px;
+}
+
+#imagenlarga {
+    width: 500px;
+}
+
+#imagenvertical {
+    width: 320px;
+    margin-left: 300px;
+}
+
+img.logo {
+    width: 70%;
+    border: #000000;
+}  
